# HarmonyOS_AirQuality

./: BUILD.gn  LICENSE  README.md  air_quality.c
include/: cj702.h  misc.h  onenet_mqtt.h
src/: cj702.c  misc.c  onenet_mqtt.c
