static_library("air_quality") {
    sources = [
        "air_quality.c",
        "src/cj702.c",
        "src/misc.c",
        "src/wifi_connect.c",
        "src/onenet_mqtt.c",
    ]
    
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//vendor/hisi/hi3861/hi3861/third_party/paho_mqtt",
        "//third_party/cJSON",
        "//third_party/paho_mqtt/MQTTPacket/src",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "//third_party/paho_mqtt/MQTTClient-C/src/liteOS",
        "include"
    ]
}